# Alasco

./: .gitignore  README.md  example.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  sandbox.ipynb
Alasco/: LICENSE  __init__.py  alasco.py  client.py  data_fetcher.py  data_transformer.py  data_updater.py  document_downloader.py  document_uploader.py  utils.py
